--- a/EnsekEnergyManager.Infrastructure/EnsekEnergyManager.Infrastructure.csproj
+++ b/EnsekEnergyManager.Infrastructure/EnsekEnergyManager.Infrastructure.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\EnsekEnergyManager.Classes\EnsekEnergyManager.Classes.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Context\" />
+  </ItemGroup>
+
 </Project>
