#03 - csv pasring and DB context online

--- a/EnsekEnergyManager/EnsekEnergyManager.csproj
+++ b/EnsekEnergyManager/EnsekEnergyManager.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EnsekEnergyManager.Classes\EnsekEnergyManager.Classes.csproj" />
     <ProjectReference Include="..\EnsekEnergyManager.Infrastructure\EnsekEnergyManager.Infrastructure.csproj" />
   </ItemGroup>
 
