--- a/EnsekEnergyManager.Infrastructure/EnsekEnergyManager.Infrastructure.csproj
+++ b/EnsekEnergyManager.Infrastructure/EnsekEnergyManager.Infrastructure.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="31.0.2" />
+    <PackageReference Include="EPPlus" Version="7.1.2" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
@@ -21,6 +24,15 @@
 
   <ItemGroup>
     <Folder Include="Context\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Seeders\Csv\Meter_Reading.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Seeders\Csv\Test_Accounts.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
