--- a/EnsekEnergyManager.Classes/EnsekEnergyManager.Classes.csproj
+++ b/EnsekEnergyManager.Classes/EnsekEnergyManager.Classes.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
