--- a/EnsekEnergyManager.Classes/EnsekEnergyManager.Classes.csproj
+++ b/EnsekEnergyManager.Classes/EnsekEnergyManager.Classes.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
