--- a/EnsekEnergyManager.Infrastructure/EnsekEnergyManager.Infrastructure.csproj
+++ b/EnsekEnergyManager.Infrastructure/EnsekEnergyManager.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
     <PackageReference Include="CsvHelper" Version="31.0.2" />
     <PackageReference Include="EPPlus" Version="7.1.2" />
     <PackageReference Include="Mapster" Version="7.4.0" />
